# Traffic_hazard_prediction

./: .gitattributes  .gitignore  README.md
Doc/: 2003048-你也秃头对不队-【A05】智能网联汽车辅助驾驶安全信息检测系统-项目完整文档.md  ~$03048-你也秃头对不队-【A05】智能网联汽车辅助驾驶安全信息检测系统-项目完整文档.md
code/: CMakeLists.txt  carDetection.cpp
code/Carcam/: CMakeLists.txt
code/Carcam/src/: main.cpp
code/Carcam/src/ui/: main_window.ui
code/TestDemo/: CMakeLists.txt  carDetection.cpp
dataset/SSD/models/onnx_file/: labels.txt
